# PacketDial

./: .gitignore  CHANGELOG.md  MULTIWINDOW_REMOVAL_PLAN.md  README.md  analysis_results.md  implementation_plan.md  melos.yaml  pjsip_err.txt  plan.md  pubspec.yaml  recording.md  temp_check_make_exit.sh  temp_gitbash_build.sh  temp_gitbash_make.sh  temp_make_no_dep.sh  temp_repro_make_dep.sh  temp_repro_webrtc_dep.sh  test_c_call.c  test_load.dart  test_out.txt  version.json
.dart_tool/: package_config.json  package_graph.json
.dart_tool/hooks_runner/objective_c/29d76d7f73/: hook.dill.d  input.json  output.json  stdout.txt
.dart_tool/hooks_runner/objective_c/60a1bdea6c/: dependencies.dependencies_hash_file.json  hook.dill.d  input.json  output.json  stdout.txt
.dart_tool/hooks_runner/objective_c/79f89d2f10/: dependencies.dependencies_hash_file.json  hook.dependencies_hash_file.json  (+4 more)
.github/actions/build-windows/: action.yml
.github/workflows/: pages.yml  release.yml  rust-ci.yml  windows-ci.yml
app_flutter/: analyze_output.txt  analyzer_out.txt  plan_recordings_playlist.md  pubspec.yaml  test_call.dart
app_flutter/lib/: main.dart  sip_test_cli.dart
app_flutter/lib/core/: account_service.dart  app_settings_service.dart  app_theme.dart  audio_service.dart  call_event_service.dart  clipboard_service.dart  contacts_service.dart  customer_lookup_service.dart  dialing_rules_service.dart  encryption_service.dart  engine_channel.dart  flutter_event_bus.dart  incoming_call_controller.dart  integration_service.dart  recording_service.dart  screen_pop_service.dart  sip_uri_utils.dart  tray_controller.dart  window_prefs.dart
app_flutter/lib/ffi/: engine.dart
app_flutter/lib/models/: account.dart  account_schema.dart  account_schema.g.dart  audio_device.dart  call.dart  call_history_schema.dart  call_history_schema.g.dart  caller_id_transformation.dart  dialing_rule.dart  media_stats.dart  recording_item.dart
app_flutter/lib/providers/: account_setup_provider.dart  app_settings_provider.dart  contacts_provider.dart  dialer_ui_provider.dart  engine_provider.dart  incoming_call_provider.dart  recordings_provider.dart  window_prefs_provider.dart
app_flutter/lib/screens/: account_setup_page.dart  account_setup_window.dart  accounts_screen.dart  active_call_screen.dart  app_settings_page.dart  blf_contacts_page.dart  contacts_screen.dart  diagnostics_screen.dart  dialer_screen.dart  history_screen.dart  incoming_call_banner.dart  incoming_call_popup.dart  integration_settings_page.dart  recordings_screen.dart
app_flutter/lib/widgets/: app_search_bar.dart  audio_player_controls.dart  clipboard_popup.dart  empty_state.dart  gradient_action_button.dart  info_banner.dart  page_scaffold.dart  recording_list_tile.dart  section_title.dart  setting_card.dart  status_badge.dart  title_bar.dart
app_flutter/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
app_flutter/test/: engine_event_id_test.dart  models_test.dart  widget_test.dart
app_flutter/windows/: CMakeLists.txt
app_flutter/windows/flutter/: CMakeLists.txt  generated_plugin_registrant.cc  generated_plugins.cmake
app_flutter/windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  main.cpp  run_loop.cpp  run_loop.h  utils.cpp  win32_window.cpp  win32_window.h
apps/softphone_app/: README.md  pubspec.yaml
apps/softphone_app/lib/: main.dart
apps/softphone_app/windows/: CMakeLists.txt
assets/installer/: README.md  setup.iss
core_rust/: Cargo.toml  build.rs  build_log.txt
core_rust/src/: lib.rs
core_rust/src/shim/: pjsip_shim.c  pjsip_shim.h
docs/: BUILD.md  BUILD_AND_INSTALL.md  FEATURES.md  FFI_API.md  RELEASE_GUIDE.md  _config.yml  architecture.md  build_windows.md  dev-workflow.md  developer-guide.md  flutter-app.md  index.html  integration.md  pjsip-build.md  pjsua-configuration.md  quickstart.md  release-process.md  rust-core.md  troubleshooting.md  ux_flows.md  windows_setup_guide.md
docs/adr/: ADR-001-engine-selection.md
engine_pjsip/: README.md  pjproject_config_site.h
native/voip_core/: CMakeLists.txt  README.md  sync_artifacts.ps1
native/voip_core/android/: README.md  build_android.ps1
native/voip_core/include/: voip_core.h
native/voip_core/src/core/: engine_bridge.c
native/voip_core/src/shim/: pjsip_shim.c
native/voip_core/windows/: build_windows.ps1
reference/: .gitignore  CHANGELOG.md  README.md  vcpkg_dependencies.txt
reference/.github/workflows/: rust-ci.yml  windows-ci.yml
reference/app_flutter/: README.md  analysis_options.yaml  pubspec.yaml
reference/app_flutter/lib/: main.dart
reference/app_flutter/test/: engine_event_id_test.dart  models_test.dart
reference/app_flutter/windows/: .gitignore
reference/assets/installer/: README.md
reference/core_rust/src/: lib.rs
reference/docs/: FEATURES.md  RELEASE_GUIDE.md  SOFTPHONE_FEATURE_ANALYSIS.md  api.md  architecture.md  dev-workflow.md  flutter-app.md  msix-store-packaging.md  pjsip-build.md  quickstart.md  security.md  spec.md  test_plan.md  troubleshooting.md  vendored-binaries-migration.md  windows_setup_guide.md
reference/docs/issues/: issue-pjsip-450002-device-id-out-of-range.md
reference/engine_pjsip/: README.md  pjproject_config_site.h
reference/scripts/: build_all.ps1  build_dist.ps1  build_pjsip.ps1  package.ps1  validate_audio_windows.ps1
reference/tools/pd/: Cargo.toml
scripts/: bootstrap_flutter.ps1  build_all.ps1  build_core.ps1  build_core_debug.ps1  build_installer.ps1  build_package.ps1  build_pjsip.ps1  copy-flutter-runtime.ps1  fetch_pjsip.ps1  package.ps1  register_protocols.ps1  run_app.ps1  setup_windows.ps1  verify-flutter-runtime.ps1
tools/pd/src/: main.rs
vcpkg/installed/vcpkg/: compiler-file-hash-cache.json  status
(+158 files in other folders)
